# nestor

./: .env.example  .gitignore  Cargo.toml  README.md  nestor.toml
.github/workflows/: ci.yml  deploy.yml
crates/engine/: Cargo.toml
crates/engine/src/: alert.rs  calibrate.rs  config.rs  kalshi.rs  lib.rs  logging.rs  reconcile.rs  risk.rs  selftest.rs  sizing.rs  state.rs  strategy.rs  weather.rs
crates/lock/: Cargo.toml
crates/lock/src/: backtest.rs  coinbase.rs  lib.rs  signal.rs  strategy.rs
crates/streak/: Cargo.toml
crates/streak/src/: lib.rs  signal.rs  strategy.rs
crates/weather/: Cargo.toml
crates/weather/src/: lib.rs  probe.rs
docs/: WORKFLOW.md
docs/HANDOFF/: 00-STATE.md  01-CONVERSATION.md
docs/specs/: 00-architecture.md  01-risk-layer.md  02-lock-sleeve.md
docs/tickets/: README.md  T001-risk-layer.md  T002-config-file.md  T003-bias-calibration.md  T004-settlement-reconcile.md  T005-verify-tickers-stations.md  T006-ci-on-prs.md  T007-live-order-path-test.md  T008-vps-provisioning.md  T009-lock-sleeve.md  T010-consume-biases.md  T011-fill-verification.md  T012-streak-sleeve.md
nestor/: kalshi.py  logutil.py  sizing.py  weather.py  weather_bot.py
nestor_bin/: Cargo.toml
nestor_bin/src/: main.rs
reference/python/: requirements.txt
reference/python/config/: cities.py
scripts/: run_weather.py
