[workspace]
resolver = "2"
members = ["crates/engine", "crates/weather", "crates/lock", "nestor_bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.9"
async-trait = "0.1"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
toml = "0.8"
