[package]
name = "nestor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nestor"
path = "src/main.rs"

[dependencies]
engine = { path = "../crates/engine" }
weather = { path = "../crates/weather" }
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
