[package]
name = "nestor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nestor"
path = "src/main.rs"

[dependencies]
engine = { path = "../crates/engine" }
weather = { path = "../crates/weather" }
lock = { path = "../crates/lock" }
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
futures.workspace = true
fs2.workspace = true
