[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
async-trait.workspace = true
rsa.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
uuid.workspace = true
