[package]
name = "weather"
version.workspace = true
edition.workspace = true

[dependencies]
engine = { path = "../engine" }
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde_json.workspace = true
